[package]
name = "rabbithutch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reql = "0.11.0"
serde_json = "1.0.68"
serde = "1.0.137"
serde_derive = "1.0.137"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3.17"
amiquip = "0.4.2"
redis = "0.21.5"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

